terraform/modules/eks/main.tf
module "eks" {
  source  = "terraform-aws-modules/eks/aws"
  version = "v18.20.5"

  cluster_version                 = var.cluster_version
  cluster_name                    = var.cluster_name
  cluster_endpoint_private_access = var.cluster_endpoint_private_access
  cluster_endpoint_public_access  = var.cluster_endpoint_public_access
  manage_aws_auth_configmap       = var.manage_aws_auth_configmap

   cluster_addons = {
     coredns = {
       resolve_conflicts = "OVERWRITE"
     }
     kube-proxy = {}
     vpc-cni    = {
       resolve_conflicts = "OVERWRITE"
     }
   }

  cluster_tags = {
    Name = var.cluster_name
  }

  vpc_id     = var.vpc_id
  subnet_ids = var.subnet_ids

  # Extend cluster security group rules
   cluster_security_group_additional_rules = {
     egress_nodes_ephemeral_ports_tcp = {
       description                = "To node 1025-65535"
       protocol                   = "tcp"
       from_port                  = 1025
       to_port                    = 65535
       type                       = "egress"
       source_node_security_group = true
     }
   }

  # Extend node-to-node security group rules
   node_security_group_additional_rules = {
     ingress_self_all = {
       description = "Node to node all ports/protocols"
       protocol    = "-1"
       from_port   = 0
       to_port     = 0
       type        = "ingress"
       self        = true
     }
     egress_all = {
       description      = "Node all egress"
       protocol         = "-1"
       from_port        = 0
       to_port          = 0
       type             = "egress"
       cidr_blocks      = ["0.0.0.0/0"]
       ipv6_cidr_blocks = ["::/0"]
     }
  }

  # EKS Managed Node Group(s)
  eks_managed_node_group_defaults = {
    ami_type       = "AL2_x86_64"
    instance_types = var.instance_types

      attach_cluster_primary_security_group = false
      vpc_security_group_ids                = [aws_security_group.additional.id]
  }
  
  eks_managed_node_groups = {
    blue  = {}
    green = {
      min_size     = 1
      max_size     = 3
      desired_size = 1

      instance_types = var.instance_types
      capacity_type  = "SPOT"
      labels         = {
        Environment = var.environment
      }

      taints = {
        dedicated = {
          key    = "dedicated"
          value  = "gpuGroup"
          effect = "NO_SCHEDULE"
        }
      }

      update_config = {
        max_unavailable_percentage = var.max_unavailable_percentage
      }
    }
  }
  tags = var.tags
}

 resource "aws_security_group" "additional" {
   name_prefix = "${var.cluster_name}-additional"
   vpc_id      = var.vpc_id

   ingress {
     from_port   = 22
     to_port     = 22
     protocol    = "tcp"
     cidr_blocks = [
       "10.0.0.0/8",
       "172.16.0.0/12",
       "192.168.0.0/16",
     ]
   }
 }
